# SecureBuild

./: .dockerignore  .gitignore  .trivyignore  CMakeLists.txt  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
cmake/: SecureBuildConfig.cmake.in
cpp/: CMakeLists.txt
cpp/include/securebuild/: tensor_ops.h
cpp/src/: tensor_ops.cpp
docker/: Dockerfile  Dockerfile.dev
scripts/: build.sh
tests/: CMakeLists.txt  test_tensor_ops.cpp
